<resources>
    <string name="app_name">快递系统</string>
    <string name="permission_camera">App扫码需要用到拍摄权限</string>
    <string name="permission_external_storage">App需要用到读写权限</string>
    <string name="tips_scan_code">将二维码/条形码放入框内，即可自动扫码</string>
    <string name="qr_code">二维码</string>
    <string name="bar_code">条形码</string>
    <string name="scaner_text">扫码获取寄件信息</string>
    <string name="sign_in">登录</string>
    <string name="hint_username">账号</string>
    <string name="username">账号</string>
    <string name="username_empty_warning">账号不能为空</string>
    <string name="hint_password">密码</string>
    <string name="password_empty_warning">密码不能为空</string>
    <string name="confirm_password_not_same_warning">两次密码输入不一样</string>
    <string name="phone_warning">电话格式不正确</string>
    <string name="register_success">注册成功</string>
    <string name="login_success">登录成功</string>
    <string name="register_fail">注册失败</string>
    <string name="login_fail">登录失败</string>
    <string name="get_info_fail">获取信息失败</string>
    <string name="password">密码</string>
    <string name="phone_number">电话</string>
    <string name="address">地址</string>
    <string name="confirm_password">确认密码</string>
    <string name="sign_in_button">登录</string>
    <string name="register_in_button">注册</string>
    <string name="create_text">没有账号，注册账号</string>
    <string name="cancel">取消</string>
    <string name="base_info">基本信息</string>
</resources>
